--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <nav class="navbar ">
         <ul class="nav-list another ">
             <div class="logo"><img src ="https://i.pinimg.com/originals/de/06/08/de06081556ce521ca1751711c58839f3.jpg" alt="logo"></div>
-            <li><a href ="html demo.html">Home </a></li>
+            <li><a href ="index.html">Home </a></li>
             <li><a href="about.html">About</a></li>
             <li><a href ="news.html">News</a></li>
             <li><a href ="reforms.html">Mitigation</a></li>
